# backtester_v2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  bugs.md  pyproject.toml  test.py  vectorized.md
.github/chatmodes/: coach.chatmode.md  explainer.chatmode.md  implementer.chatmode.md  instructor.chatmode.md  observer.chatmode.md  planner.chatmode.md  researcher.chatmode.md  reviewer.chatmode.md  slice_explainer.chatmode.md
.github/workflows/: ci.yml
adr/: 001-determinism-by-default.md  002-safety-fail-closed.md  003-observability-foundation.md  003-small-slices.md  004-interfaces-before-implementation.md  004-utc-everywhere.md  005-modular-monolith-over-microservices.md  005-observability-foundation.md  006-event-driven-core-loop.md  006-test-pyramid-and-property-based.md  007-rest-polling-initial-live-feed.md  007-utc-everywhere.md  008-io-policy-no-implicit-network.md  008-single-venue-asset-scope-v1.md  009-modular-monolith-over-microservices.md  009-storage-parquet-logs-snapshots.md  010-event-driven-core-loop.md  011-observability-minimal-metrics-and-alerts.md  011-single-threaded-deterministic-backtests.md  012-rest-polling-initial-live-feed.md  013-single-venue-asset-scope-v1.md  014-storage-parquet-logs-snapshots.md  015-execution-model-no-partial-fills-v1.md  016-idempotent-client-order-ids.md  017-slippage-model-spread-pov.md  018-risk-rails-pretrade-and-halt.md  019-config-and-secrets-management.md  020-observability-minimal-metrics-and-alerts.md  021-micro-batch.md  022-audit-subscriber.md  023-async-data-feeder.md  024-logging-architecture-duality.md
archive/: OLDAGENTS.md  OLDcopilot-instructions.md  OLDplanner.chatmode.md  old_functions.py
artifacts/: BT-0000_git_sha.txt  BT-0000_repro_baseline.txt  BT-0000_ticket_hash.txt  BT-0001_config_hash_probe.txt  BT-0001_config_provider_sha.txt  BT-0001_pytest_config_layer.txt  BT-0001_rg_config_provider.txt  BT-0001_rg_manifest.txt  BT-0001_rg_secrets_provider.txt
backtester/: analysis.py
backtester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backtester/adapters/: env_provider.py  types.py
backtester/adapters/telemetry/: jsonl.py
backtester/audit/: audit.py  audit_analyzer.py  monitor.py
backtester/cli/: __init__.py  bt.py
backtester/config/: config_loader.py  config_resolver.py  configs.py  sma.toml
backtester/core/: account.py  audit.py  backtest_engine.py  backtest_engine_new.py  bus.py  clock.py  config_loader.py  ctx.py  fees.py  models.py  other.py  performance.py  topics.py  utility.py
backtester/data/: downloader.py  feeder.py  loader.py  resampler.py  source.py
backtester/data/live/: __init__.py  config.py  connection.py  errors.py  handlers.py  health.py  router.py  (+2 more)
backtester/errors/: errors.py
backtester/ports/: clock.py  config_provider.py  event_bus.py  market_data.py  order_router.py  portfolio_store.py  risk_engine.py  run_manifest_store.py  secrets_provider.py  snapshot_store.py  telemetry.py
backtester/risk/: order_validation.py
backtester/sim/: sim.py  sim_models.py
backtester/strategy/: base.py  order_validation.py  sma.py  sma_extended.py
backtester/types/: aliases.py  data.py  topics.py  types.py
backtester/utils/: order_utility.py  utility.py
backtester/vectorized/: __init__.py  contracts.py  data_loader.py  engine.py  optimizer.py  strategy.py  wfa.py
cli/: __init__.py  bt.py
configs/: backtest.toml  sma_extended.toml  sma_extended_stress.toml
docs/: ProjectPlan.md  beware.md  bus_topology.md  downloading_data.md  live_data.md  live_market_data.md  orchestration.md  vectorized_module_guide.md
docs/slices/: BT-0000_diagram.mmd  BT-0000_implementation_brief.md  BT-0001_diagram.mmd  BT-0001_implementation_brief.md  BT-0002_implementation_brief.md  README.md  SLICE-0000-bootstrap-and-contracts.md  SLICE-0001-config-and-secrets.md  SLICE-0002-backtest-core.md  SLICE-0003-strategy-execution-minimal-risk.md  SLICE-0004-paper-trading-parity.md  SLICE-0005-shadow-mode.md  SLICE-0006-risk-rails-and-safety.md  SLICE-0007-binance-rest-live-adapter.md  SLICE-0008-observability-and-recovery.md  SLICE-0009-contract-test-harness.md
examples/: vectorized_showcase.py
learning/: async.ipynb  async.py  clock.ipynb  config_loader.ipynb  env_provider.ipynb  pydantic.ipynb
runs/cli_noop/: events.log.jsonl  run_manifest.json
runs/example/: events.log.jsonl  run_manifest.json
runs/run1/: events.log.jsonl  run_manifest.json
runs/run2/: events.log.jsonl  run_manifest.json
test_output/bus_test/: TEST.ndjson
tests/core/: test_env_provider.py
tests/fixtures/: fixtures.py
tests/vectorized/: __init__.py  test_data_loader.py  test_engine.py  test_optimizer.py  test_strategy.py  test_wfa.py
tickets/: BT-0000.json  BT-0001.json  BT-0002.json
(+25 files in other folders)
