[project]
name = "backtester"
version = "0.0.1"
description = "Deterministic trading backtester skeleton"
authors = [ {name = "nicolas"} ]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "mypy==1.11.2",
    "ruff==0.6.9",
    "types-setuptools",
]

[project.scripts]
bt = "backtester.cli.bt:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly control which packages are included to avoid accidental inclusion of top-level folders

[tool.setuptools.packages.find]
include = ["backtester*"]
exclude = [
	"tests*",
	"docs*",
	"scripts*",
	"data*",
	"runs*",
	"artifacts*",
	"configs*",
	"sample_data*",
	"tickets*",
	"adr*",
	"archive*"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "I",  # pyflakes/pycodestyle/imports
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q -ra"
testpaths = [
  "tests",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
exclude = [
  "^tests/",
  "^sample_data/",
  "^learning/",
]
